--- a/L_S.html
+++ b/L_S.html
@@ -17,10 +17,10 @@
             <div class="logo"><a href="#">NELA</a></div>
             <div class="menu">
                 <ul>
-                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
-                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
-                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANDSCAPES & STILLMORTS</a></li>
-                    <li class="menu_item"><a href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
+                    <li class="menu_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                    <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                    <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
                                 <a class="tw"></a> 
                                 <a class="fb"></a>
                         </li>
