--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -13,21 +13,20 @@
     <body>
 <!-- шапка -->
 <div class="header">
-        <!-- <a href="#" class="logo">NELA</a> -->
-        <div class="nav">
-            <ul class="spesial">
-                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Nela.html">NELA</a></li>
-                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Portraits%20Gallery.html">PORTRAITS</a></li>
-                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Gobilen.html">TAPESTRRIES</a></li>
-                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/L_S.html">LANSCAPES & STILLMORTS</a></li>
-                <li class="menu_item"> <a class="a" title="" href="file:///D:/10%20%D1%83%D1%80%D0%BE%D0%BA/Postcards%20Gallery.html">POSTCARDS</a></li>
-                <li class="social">
+    <div class="logo"><a href="Nela.html">NELA</a></div>
+    <div class="menu">
+        <ul>
+            <li class="menu_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+            <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+            <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
+            <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
                         <a class="tw"></a> 
                         <a class="fb"></a>
                 </li>
             </ul>
         </div>
     </div>
+<!-- галерея -->
         
 
 <div class="wrapper">
