--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -2,8 +2,8 @@
 <html land="ru">
     <head>
         <meta charset="unf-8"/>
-        <title>N_PORTRAITS</title>
-        <link rel="stylesheet" href="styles/PortraitStyle.css"/>
+        <title>TAPESTRRIES</title>
+        <link rel="stylesheet" href="styles/TAPStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
@@ -26,16 +26,17 @@
             </div>
         <!-- галерея -->
 <div class="gallery">
-    <div><img src="pic/po/IMG_0179-min.jpg" alt=""></div>
-    <div><img src="pic/po/CAM00006-min.jpg" alt=""></div>
-    <div><img src="pic/po/CAM05230-min.jpg" alt=""></div>
-    <div><img src="pic/po/DSC00295-1-min.jpg" alt=""></div>
-    <div><img src="pic/po/DSC00299-1 1-min.jpg" alt=""></div>
-    <div><img src="pic/po/DSCN0839-2-min.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_3311 1-min.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_3982-min.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_4264-min.jpg" alt=""></div>
-    <div><img src="pic/po/mom(1)-min.jpg" alt=""></div>
+    
+   
+    <div><img src="pic/9.jpg" alt="">
+        <h2> Производство гобелена вручную – это творчество. Как и ковры ручной работы, каждое изделие, даже сделанное по одному макету имеет свои особенности и отличия.</h2>
+    </div>
+    <div><img src="pic/8.jpg" alt="">
+        <h3>РУЧНОЕ ТКАЧЕСТВО/НИТЬ/ШЕРСТЬ</h3>
+    </div>
+    <div><img src="pic/10.jpg" alt="">
+        <h2>В процессе эксплуатации гобелены неприхотливы. Достаточно раз в год протирать щеткой или салфеткой от пыли, можно пропылесосить на небольшой мощности.</h2>
+    </div>
 </div>
 
 
