--- a/Gobilen2.html
+++ b/Gobilen2.html
@@ -2,7 +2,10 @@
 <html lang="ru">
 <head>
    <meta charset="UTF-8">
-   <title>Gobilen2</title>
+   <title>Information For Customer
+
+
+</title>
  
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="styles/G_Style.css" type="text/css">
@@ -11,25 +14,28 @@
    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 </head>
 <body>
-<section class="dws-wrapper">
-    <div class="imageBox">
-        <img src="pic/9.jpg" alt="ручнаяработа">
-        <h3>Ручное ткачество</h3>
-        <p>шерсть\гладкое ткачество</p>
-        <ul>
-           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-           <li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
-           <!-- <li><a href="#"></a></li>
-           <li><a href="#"></a></li> -->
-        </ul>
-     </div>
-  </section>
+        <div class="header">
+                <div class="logo"><a href="#">NELA</a></div>
+                <div class="menu">
+                    <ul>
+                        <li class="menu_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                        <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                        <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                        <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
+                    </ul>
+                </div>
+            </div>
+
   <wrapper>
     <div class="dws-wrapper2">
+            <div class="info">
+                    <div class="text">
+                        <h2>Для офотмления заказа есть вещи, котрые мне необходимо знать. Отправьте мне электронное письмо, или свяжитесь в соцсетях, расскажите подробнее о вашем заказе. Время выполнения зависит от объема работы. Так что приготовтесь подождать, срок колеблется от нескольких недель до нескольких месяцев. Мое тврчество - это двусторонний процесс. От Вас многое зависит. Чем точнее и понятнее вы объясните идею, тем точнее я смогу ее выполнить. Работа через границы не является препятствием. Буду рада Вам помочь.</h3>
+                    </div>
+                </div>
         <input type="checkbox" name="toggle" id="dws-form" class="toggleForm">
        <div class="dws-container">
-            <label for="dws-form" class="toggleForm">Задать вопрос</label>
+            <label for="dws-form" class="toggleForm">Оставить заказ</label>
           <form class="formBox">
             <div class="inputBox">
                <label class="labelText">Ваше имя:</label>
