--- a/Portraits Gallery.html
+++ b/Portraits Gallery.html
@@ -5,24 +5,40 @@
         <title>N_PORTRAITS</title>
         <link rel="stylesheet" href="styles/PortraitStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+        <link rel="stylesheet" href="styles/style.css"/>
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-
+        <link rel="stylesheet" href="styles/animate.min.css"/>
+        <script type="text/javascript"></script>
     </head> 
     <body>
         <!-- шапка -->
+        <div class="container_maine" id="top">
+            <div class="hamburger" >
+                    <div class="burger_content">
+                        <!-- <div class="logo_hamburger"><a href="#">NELA</a></div>  -->
+                        <div class="menu_hamburger">
+                            <ul class="burger">
+                                <li class="menu_hamburger_item"><a href="Nela.html">Nela</a></li>
+                                <li class="menu_hamburger_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                                <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                                <li class="menu_hamburger_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                                <li class="menu_hamburger_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
+                            </ul>
+                    </div>
+                </div>
+            </div> 
         <div class="header">
             <div class="logo"><a href="Nela.html">NELA</a></div>
             <div class="menu">
                 <ul>
-                    <li class="menu_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a  href="Portraits Gallery.html">PORTRAITS</a></li>
                     <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
                     <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
                     <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
-                                
-                        
-                    </ul>
-                </div>
+                </ul>
             </div>
+        </div>
+    </div>
         <!-- галерея -->
 <div class="gallery">
     <div><img src="pic/po/IMG_0179-min.jpg" alt=""></div>
@@ -36,7 +52,26 @@
     <div><img src="pic/po/IMG_4264-min.jpg" alt=""></div>
     <div><img src="pic/po/mom(1)-min.jpg" alt=""></div>
 </div>
+<div class="footer">
+    <div class="info">
+        <a href="Information.html">Information For Customer</a>
+    </div>
+    <div class="soucial">
+        <a href="#"class="tw"><img src="icons/FF.png"></a> 
+        <a href="#"class="fb"><img src="icons/TT.png"></a>
+    </div>
+    <div class="mail">
+        <a href="#">nela.art@bk.ru</a>
+</div>   
+</div>
+</div> 
 
+<a id="nav" href="#top"><input type="submit" value="UP"  class="button"></a>
+
+<link rel="stylesheet" href="styles/media.css"/>
+<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+<script src="scripts/burger.js"></script>
+<script src="scripts/scripts.js"></script>
 
     </body>
 </html>    
