--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -6,39 +6,71 @@
         <link rel="stylesheet" href="styles/TAPStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-
+        <link rel="stylesheet" href="styles/animate.min.css"/>
+        <script type="text/javascript"></script>
     </head> 
     <body>
         <!-- шапка -->
+        <div class="container_maine" id="top">
+            <div class="hamburger" >
+                    <div class="burger_content">
+                        <!-- <div class="logo_hamburger"><a href="#">NELA</a></div>  -->
+                        <div class="menu_hamburger">
+                            <ul class="burger">
+                                <li class="menu_hamburger_item"><a href="Nela.html">Nela</a></li>
+                                <li class="menu_hamburger_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                                <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                                <li class="menu_hamburger_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                                <li class="menu_hamburger_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
+                            </ul>
+                    </div>
+                </div>
+            </div> 
         <div class="header">
             <div class="logo"><a href="Nela.html">NELA</a></div>
             <div class="menu">
                 <ul>
-                    <li class="menu_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a  href="Portraits Gallery.html">PORTRAITS</a></li>
                     <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
                     <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
                     <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
-                                <a class="tw"></a> 
-                                <a class="fb"></a>
-                        </li>
-                    </ul>
-                </div>
+                </ul>
             </div>
+        </div>
+    </div>
         <!-- галерея -->
 <div class="gallery">
     
    
     <div><img src="pic/9.jpg" alt="">
-        <h2> Производство гобелена вручную – это творчество. Как и ковры ручной работы, каждое изделие, даже сделанное по одному макету имеет свои особенности и отличия.</h2>
+        <h2> 
+            The production of tapestry by hand is creativity. Like handmade carpets, every product, even made according to the same layout, has its own peculiarities and differences.</h2>
     </div>
     <div><img src="pic/8.jpg" alt="">
-        <h3>РУЧНОЕ ТКАЧЕСТВО/НИТЬ/ШЕРСТЬ</h3>
+        <h3>MANUAL TISSUE/THREAD/WOOL</h3>
     </div>
     <div><img src="pic/10.jpg" alt="">
-        <h2>В процессе эксплуатации гобелены неприхотливы. Достаточно раз в год протирать щеткой или салфеткой от пыли, можно пропылесосить на небольшой мощности.</h2>
+        <h2>In the process of exploitation, the tapestries are unpretentious. It is enough once a year to wipe with a brush or napkin from dust, you can vacuum it with a little power.</h2>
     </div>
 </div>
-
+<div class="footer">
+    <div class="info">
+        <a href="Information.html">Information For Customer</a>
+    </div>
+    <div class="soucial">
+        <a href="#"class="tw"><img src="icons/FF.png"></a> 
+        <a href="#"class="fb"><img src="icons/TT.png"></a>
+    </div>
+    <div class="mail">
+        <a href="#">nela.art@bk.ru</a>
+</div>   
+</div>
 
     </body>
+
+    <link rel="stylesheet" href="styles/media.css"/>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="scripts/burger.js"></script>
+    <script src="scripts/scripts.js"></script>
+
 </html>    
