--- a/L_S.html
+++ b/L_S.html
@@ -8,25 +8,38 @@
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
         <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
         <link rel="stylesheet" href="styles/animate.min.css"/>
-
+        <script type="text/javascript"></script>
 
     </head> 
     <body>
         <!-- шапка -->
+        <div class="container_maine" id="top">
+            <div class="hamburger" >
+                    <div class="burger_content">
+                        <!-- <div class="logo_hamburger"><a href="#">NELA</a></div>  -->
+                        <div class="menu_hamburger">
+                            <ul class="burger">
+                                <li class="menu_hamburger_item"><a href="Nela.html">Nela</a></li>
+                                <li class="menu_hamburger_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                                <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                                <li class="menu_hamburger_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
+                                <li class="menu_hamburger_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
+                            </ul>
+                    </div>
+                </div>
+            </div> 
         <div class="header">
-            <div class="logo"><a href="#">NELA</a></div>
+            <div class="logo"><a href="Nela.html">NELA</a></div>
             <div class="menu">
                 <ul>
-                    <li class="menu_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
+                    <li class="menu_item"><a  href="Portraits Gallery.html">PORTRAITS</a></li>
                     <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
                     <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
                     <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
-                                <a class="tw"></a> 
-                                <a class="fb"></a>
-                        </li>
-                    </ul>
-                </div>
+                </ul>
             </div>
+        </div>
+    </div>
         <!-- галерея -->
 <div class="galleryL_S">
     <div class="LS fds" style="background-image: url('pic/L&S/1.jpg')"> <img src="" alt=""></div>
@@ -50,10 +63,26 @@
     <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div>
     <div class="rectangl" style="background-image: url('pic/L&S/2.jpg')"></div> -->
 </div>
+<div class="footer">
+    <div class="info">
+        <a href="Information.html">Information For Customer</a>
+    </div>
+    <div class="soucial">
+        <a href="#"class="tw"><img src="icons/FF.png"></a> 
+        <a href="#"class="fb"><img src="icons/TT.png"></a>
+    </div>
+    <div class="mail">
+        <a href="#">nela.art@bk.ru</a>
+    </div>   
+</div>
+ 
+<a id="nav" href="#top"><input type="submit" value="UP"  class="button"></a>
 
 
     </body>
+    <link rel="stylesheet" href="styles/media.css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="scripts/burger.js"></script>
     <script src="scripts/scripts.js"></script>
 
 </html>    
