--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -2,6 +2,7 @@
 <html land="ru">
     <head>
         <meta charset="unf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Postcards Gallery</title>
         <link rel="stylesheet" href="styles/PostcardStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
