--- a/Nela.html
+++ b/Nela.html
@@ -70,14 +70,14 @@
     <div class="container_NELA">
         <div class="container_NELA_maine">
             <div class="container_NELA_first">
-                <img src="pic/102_0251 1 1.jpg"; height="400px">
+                <img src="pic/102_0251_201_201.jpg"; height="400px">
             </div>
             <div class="container_NELA_second animated zoomIn">
                 <div class="text_N"><h4>  <p>The lead time depends on the amount of work. So be prepared to wait, the term ranges from a few weeks to a month. My work is a two-way process. From you much depends: the more accurate and clearer you explain the idea, the more accurately I can perform it. Working across borders is not an obstacle.</p> 
             <p>I will be happy to help you.</p> </h4> 
                 </div>
                     <div class="container_NELA_third"> 
-                        <img src="pic/132_3294.jpg"; height="200px"> 
+                        <img src="pic/132_3294.JPG"; height="200px"> 
                     </div>
             </div>
         </div>
