--- a/L_S.html
+++ b/L_S.html
@@ -2,6 +2,7 @@
 <html land="ru">
     <head>
         <meta charset="unf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>L_S</title>
         <link rel="stylesheet" href="styles/L_SStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
@@ -69,10 +70,10 @@
     </div>
     <div class="soucial">
         <a href="#"class="tw"><img src="icons/FF.png"></a> 
-        <a href="#"class="fb"><img src="icons/TT.png"></a>
+        <a href="https://nb-no.facebook.com/nela.harshcharyk"class="fb"><img src="icons/TT.png"></a>
     </div>
     <div class="mail">
-        <a href="#">nela.art@bk.ru</a>
+        <a href="mailto:nela.art@bk.ru">nela.art@bk.ru</a>
     </div>   
 </div>
  
