--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -169,10 +169,10 @@
     </div>
         <div class="soucial">
             <a href="#"class="tw"><img src="icons/FF.png"></a> 
-            <a href="#"class="fb"><img src="icons/TT.png"></a>
+            <a href="https://nb-no.facebook.com/nela.harshcharyk"class="fb"><img src="icons/TT.png"></a>
         </div>
     <div class="mail">
-        <a href="#">nela.art@bk.ru</a>
+        <a href="mailto:nela.art@bk.ru">nela.art@bk.ru</a>
     </div>   
 </div>
 
