--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -2,6 +2,7 @@
 <html land="ru">
     <head>
         <meta charset="unf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>TAPESTRRIES</title>
         <link rel="stylesheet" href="styles/TAPStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
@@ -59,10 +60,10 @@
     </div>
     <div class="soucial">
         <a href="#"class="tw"><img src="icons/FF.png"></a> 
-        <a href="#"class="fb"><img src="icons/TT.png"></a>
+        <a href="https://nb-no.facebook.com/nela.harshcharyk"class="fb"><img src="icons/TT.png"></a>
     </div>
     <div class="mail">
-        <a href="#">nela.art@bk.ru</a>
+        <a href="mailto:nela.art@bk.ru">nela.art@bk.ru</a>
 </div>   
 </div>
 
