--- a/Portraits Gallery.html
+++ b/Portraits Gallery.html
@@ -42,14 +42,14 @@
     </div>
         <!-- галерея -->
 <div class="gallery">
-    <div><img src="pic/po/IMG_0179-min.jpg" alt=""></div>
+    <div><img src="pic/po/IMG_0179-min.JPG" alt=""></div>
     <div><img src="pic/po/CAM00006-min.jpg" alt=""></div>
     <div><img src="pic/po/CAM05230-min.jpg" alt=""></div>
     <div><img src="pic/po/DSC00295-1-min.jpg" alt=""></div>
     <div><img src="pic/po/DSC00299-1 1-min.jpg" alt=""></div>
     <div><img src="pic/po/DSCN0839-2-min.jpg" alt=""></div>
     <div><img src="pic/po/IMG_3311 1-min.jpg" alt=""></div>
-    <div><img src="pic/po/IMG_3982-min.jpg" alt=""></div>
+    <div><img src="pic/po/IMG_3982-min.JPG" alt=""></div>
     <div><img src="pic/po/IMG_4264-min.jpg" alt=""></div>
     <div><img src="pic/po/mom(1)-min.jpg" alt=""></div>
 </div>
