--- a/Nela.html
+++ b/Nela.html
@@ -114,7 +114,7 @@
                     <a href="https://nb-no.facebook.com/nela.harshcharyk"class="fb"><img src="icons/TT.png"></a>
                 </div>
                 <div class="mail">
-                    <a href="mailto:nela.art@bk.ru">nela.art@bk.ru</a>
+                    <a href="mailto:nela.art@bk.ru" target="_blank">nela.art@bk.ru</a>
             </div>   
         </div>
     </div> 
