--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="styles/PostcardStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-        <link rel="stylesheet" href="styles/lightbox.css"/>
-        <script src =" js/scrollreveal.min.js "></script>
+        <!-- <link rel="stylesheet" href="styles/lightbox.css"/> -->
+        <!-- <script src =" js/scrollreveal.min.js "></script> -->
         <link rel="stylesheet" href="styles/animate.min.css"/>
         <script type="text/javascript"></script>
     </head> 
@@ -176,14 +176,11 @@
     </div>   
 </div>
 
-<script src="js/lightbox.min.js"></script>
     <link rel="stylesheet" href="styles/media.css"/>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-     
-    <link rel="stylesheet" href="styles/media.css"/>
+    <script src="js/lightbox.min.js"></script>
     <script src="scripts/burger.js"></script>
     <script src="scripts/scripts.js"></script>
-
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     </body>
     
 
