--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -22,7 +22,7 @@
                     <ul class="burger">
                         <li class="menu_hamburger_item"><a href="Nela.html">Nela</a></li>
                         <li class="menu_hamburger_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
-                        <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                        <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRIES</a></li>
                         <li class="menu_hamburger_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
                         <li class="menu_hamburger_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
                     </ul>
@@ -34,7 +34,7 @@
     <div class="menu">
         <ul>
             <li class="menu_item"><a  href="Portraits Gallery.html">PORTRAITS</a></li>
-            <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+            <li class="menu_item"><a href="TAPESTRR.html">TAPESTRIES</a></li>
             <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
             <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
         </ul>
@@ -180,7 +180,7 @@
     <script src="js/lightbox.min.js"></script>
     <script src="scripts/burger.js"></script>
     <script src="scripts/scripts.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
     </body>
     
 
