--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -20,7 +20,7 @@
                             <ul class="burger">
                                 <li class="menu_hamburger_item"><a href="Nela.html">Nela</a></li>
                                 <li class="menu_hamburger_item"><a href="Portraits Gallery.html">PORTRAITS</a></li>
-                                <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                                <li class="menu_hamburger_item"><a href="TAPESTRR.html">TAPESTRIES</a></li>
                                 <li class="menu_hamburger_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
                                 <li class="menu_hamburger_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
                             </ul>
@@ -32,7 +32,7 @@
             <div class="menu">
                 <ul>
                     <li class="menu_item"><a  href="Portraits Gallery.html">PORTRAITS</a></li>
-                    <li class="menu_item"><a href="TAPESTRR.html">TAPESTRRIES</a></li>
+                    <li class="menu_item"><a href="TAPESTRR.html">TAPESTRIES</a></li>
                     <li class="menu_item"><a href="L_S.html">LANDSCAPES & STILLMORTS</a></li>
                     <li class="menu_item"><a href="Postcards Gallery.html">POSTCARDS</a></li>
                 </ul>
