--- a/Portraits Gallery.html
+++ b/Portraits Gallery.html
@@ -77,7 +77,7 @@
 
 <div class="footer">
     <div class="info">
-        <a href="Information.html">Information For Customer</a>
+        <a href="#open">Information For Customer</a>
     </div>
     <div class="soucial">
         <a href="#"class="tw"><img src="icons/FF.png"></a> 
