--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -56,7 +56,7 @@
 </div>
 <div class="footer">
     <div class="info">
-        <a href="Information.html">Information For Customer</a>
+        <a href="#open">Information For Customer</a>
     </div>
     <div class="soucial">
         <a href="#"class="tw"><img src="icons/FF.png"></a> 
