--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -118,8 +118,8 @@
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big2/IMG_3659.jpg">
-                <img class="front" alt="" src="pic/postc/litt2/IMG_3659.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big2/IMG_3388.jpg">
+                <img class="front" alt="" src="pic/postc/litt2/IMG_3388.jpg">
             </a>
             </div>
         </div>
@@ -146,8 +146,8 @@
         </div>
         <div class="item">
             <div>
-                <a data-lightbox="lightbox" href="pic/postc/big2/Golubi2.jpg">
-                <img class="front" alt="" src="pic/postc/litt2/Golubi2.jpg">
+                <a data-lightbox="lightbox" href="pic/postc/big2/2591.jpg">
+                <img class="front" alt="" src="pic/postc/litt2/2591.jpg">
             </a>
             </div>
         </div>
