--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="unf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>TAPESTRRIES</title>
+        <title>TAPESTRIES</title>
         <link rel="stylesheet" href="styles/TAPStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
@@ -48,7 +48,7 @@
             The production of tapestry by hand is creativity. Like handmade carpets, every product, even made according to the same layout, has its own peculiarities and differences.</h2>
     </div>
     <div><img src="pic/8.jpg" alt="">
-        <h3>MANUAL TISSUE/THREAD/WOOL</h3>
+        <h3 class="tapest">MANUAL TISSUE/THREAD/WOOL</h3>
     </div>
     <div><img src="pic/10.jpg" alt="">
         <h2>In the process of exploitation, the tapestries are unpretentious. It is enough once a year to wipe with a brush or napkin from dust, you can vacuum it with a little power.</h2>
