--- a/Nela.html
+++ b/Nela.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="unf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>NNN1</title>
+        <title>Nela</title>
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link rel="stylesheet" href="styles/style.css"/>
