--- a/Nela.html
+++ b/Nela.html
@@ -124,6 +124,7 @@
     </body>
     <link rel="stylesheet" href="styles/media.css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="scripts/burger.js"></script>
     <script src="scripts/scripts.js"></script>
     <script src="scripts/gallery.js"></script>
