--- a/Postcards Gallery.html
+++ b/Postcards Gallery.html
@@ -7,11 +7,10 @@
         <link rel="stylesheet" href="styles/PostcardStyle.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="styles/lightbox.css"/> -->
+        <link rel="stylesheet" href="styles/lightbox.css"/>
         <!-- <script src =" js/scrollreveal.min.js "></script> -->
         <link rel="stylesheet" href="styles/animate.min.css"/>
         <script type="text/javascript"></script>
-        <script src="https://code.jquery.com/jquery-latest.js"></script>
     </head> 
     <body>
 <!-- шапка -->
@@ -197,7 +196,8 @@
         <a href="mailto:nela.art@bk.ru">nela.art@bk.ru</a>
     </div>   
 </div>
-
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <link rel="stylesheet" href="styles/media.css"/>
     <script src="js/lightbox.min.js"></script>
     <script src="scripts/burger.js"></script>
