--- a/TAPESTRR.html
+++ b/TAPESTRR.html
@@ -81,8 +81,8 @@
         <a href="#open">Information For Customer</a>
     </div>
     <div class="soucial">
-        <a href="#"class="tw"><img src="icons/FF.png"></a> 
-        <a href="https://nb-no.facebook.com/nela.harshcharyk"class="fb"><img src="icons/TT.png"></a>
+        <a href="#"class="tw"><img src="icons/TT.png"></a> 
+        <a href="https://nb-no.facebook.com/nela.harshcharyk"class="fb"><img src="icons/FF.png"></a>
     </div>
     <div class="mail">
         <a href="mailto:nela.art@bk.ru">nela.art@bk.ru</a>
