--- a/Portraits Gallery.html
+++ b/Portraits Gallery.html
@@ -92,6 +92,7 @@
 <a id="nav" href="#top"><input type="submit" value="UP"  class="button"></a>
 
 <link rel="stylesheet" href="styles/media.css"/>
+<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="scripts/burger.js"></script>
 <script src="scripts/scripts.js"></script>
